    - Use X-Python-Version instead of XS-Python-Version.
    - Use ${python:Breaks} to specify Python version compatibility.
  * Support reading configuration variables from devscripts configuration
    files. (LP: #681693)
    - Added ubuntu-dev-tools.5
    - Support this in many u-d-t scripts, and update manpages.
    - Deprecate old configuration environment variables.
  * Support the combined "Name <email>" format in UBUMAIL, DEBFULLNAME, and
    DEBEMAIL. (LP: #665202)
  * Add the beginnings of a test suite. (LP: #690386)
    - Switch to setuptools, to support setup.py test.
    - Test for that every script can run --help and return 0.
    - 404main, merge-changelog, pull-debian-debdiff, pull-debian-source,
      pull-revu-source:
      + Return 0 after showing help.
    - Run pylint on Python source code.
  * ubuntutools/common.py: Remove https_proxy unsetting code, working around
    LP: #94130.
  * edit-patch: Don't let cat error through if debian/source/format doesn't
    exist.
  * pull-debian-debdiff: Rewrite in Python, and use snapshot.debian.org.
  * pull-lp-source:
    - Support -d (LP: #681699)
    - str() exceptions before passing to Logger (LP: #695523)
  * suspicious-source: Whitelist Python source code.

  [ Michael Bienia ]
  * ubuntutools/lp/lpapicache.py: Allow easier selection of 'staging' as LP
    instance to use (LP: #693060).

  [ Benjamin Drung ]
  * sponsor-patch:
    - Add new --lpinstance and --no-conf options.
    - Support configuration files.
    - Default to a temporary workdir and clean it up (LP: #691467).
    - Fix 'str' object has no attribute 'startwith' crash caused by a typo.
    - Fix crash if uploading to ubuntu without building the package before.
    - Fix: The package was only uploaded if the target was "ubuntu".
  * Recommend bzr-builddeb (used by sponsor-patch for branches).
  * Add most dependencies to Build-Depends for successfully run the tests.
  * Recommend python-gnupginterface (used by dgetlp).